src/objects/Ideas_That_Work__c.object
<CustomObject>
    <fields>
        <fullName>Any_professional_or_personal_abt_idea_25__c</fullName>
        <label>Any professional or personal abt idea-25</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_there_other_brands_currently_20__c</fullName>
        <label>Are there other brands currently -20</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please Select</fullName>
                    <default>true</default>
                    <label>Please Select</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attachment_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Carhartt_currently_offering_your_idea__c</fullName>
        <label>Carhartt currently offering your idea?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Please Select</fullName>
                    <default>true</default>
                    <label>Please Select</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carhartt_make_something_similar__c</fullName>
        <description>If Carhartt were to make something similar to your idea,how much do you think your friends/family would pay for it?*</description>
        <label>Carhartt similar to your idea -16</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_have_any_information_regarding_co__c</fullName>
        <label>Do you have any information regarding co</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Sure</fullName>
                </value>
                <value>
                    <fullName>Please Select</fullName>
                    <default>true</default>
                    <label>Please Select</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Explain_Carhartt_offers_to_idea_19__c</fullName>
        <label>Explain Carhartt offers to idea -19</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Idea_Category_Others_11__c</fullName>
        <label>Idea Category Others -11</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Idea_Category__c</fullName>
        <label>Idea Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Idea</fullName>
                </value>
                <value>
                    <fullName>Packaging Idea</fullName>
                </value>
                <value>
                    <fullName>Marketing/Advertising Idea</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Please Select</fullName>
                    <default>true</default>
                    <label>Please Select</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Idea_Title_13__c</fullName>
        <label>Idea Title -13</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_regarding_copyrights_22__c</fullName>
        <label>Information regarding copyrights -22</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Please Select</fullName>
                    <default>true</default>
                    <label>Please Select</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Information_regarding_copyrights_Text_23__c</fullName>
        <label>Information regarding copyrights Text-23</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_in_your_idea_or_purchasing_15__c</fullName>
        <label>Interested in your idea or purchasing-15</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Kind_of_Product_Idea__c</fullName>
        <label>Kind of Product Idea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New product or product improvement idea</fullName>
                </value>
                <value>
                    <fullName>Request to bring back a discontinued product</fullName>
                </value>
                <value>
                    <fullName>Request for additional sizes on a current product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product_Idea_Ans_12__c</fullName>
        <label>Product Idea Ans -12</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tell_us_a_little_bit_more_about_yourself__c</fullName>
        <label>Tell us a little bit more about yourself</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tell_us_about_your_idea_14__c</fullName>
        <label>Tell us about your idea -14</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TermCondition__c</fullName>
        <defaultValue>true</defaultValue>
        <label>TermCondition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>what_other_brands_similar_to_idea_21__c</fullName>
        <label>what other brands similar to idea -21</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <label>Ideas That Work</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Idea-{0000}</displayFormat>
        <label>Ideas That Work Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas That Work</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>